# hamodoro

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  run_hamodoro.sh
.github/workflows/: docker-publish.yml
static/: script.js  style.css
templates/: index.html
